baml_language/crates/baml_tests/snapshots/compiles/deep_method_call/baml_tests__compiles__deep_method_call__03_hir.snap
---
source: crates/baml_tests/src/generated_tests.rs
---
=== HIR2 ===
class user.A {
  b: user.B
}
class user.B {
  label: string
}
function user.from_json(j: baml.json.json) -> user.B  [expr] {
  baml.json.from_string(baml.json.stringify(j))
}
function user.from_json(j: baml.json.json) -> user.A  [expr] {
  baml.json.from_string(baml.json.stringify(j))
}
function user.greet(self: ?) -> string  [expr] {
  {  } self.label
}
function user.test_deep_field(a: user.A) -> string  [expr] {
  {  } a.b.label
}
function user.test_deep_method(a: user.A) -> string  [expr] {
  {  } a.b.greet()
}
function user.test_direct_method(b: user.B) -> string  [expr] {
  {  } b.greet()
}
function user.to_json(self: ?) -> baml.json.json  [expr] {
  map { "b": self.b.to_json() }
}
function user.to_json(self: ?) -> baml.json.json  [expr] {
  map { "label": self.label.to_json() }
}
