baml_language/crates/baml_tests/snapshots/compiles/deep_method_call/baml_tests__compiles__deep_method_call__04_5_mir.snap
---
source: crates/baml_tests/src/generated_tests.rs
---
=== MIR2 ===
fn user.B.from_json(j: baml.json.json) -> B {
    // Locals:
    let _0: B // _0 // return
    let _1: baml.json.json // j // param
    let _2: string
    let _3: type

    bb0: {
        _2 = call const fn baml.json.stringify(copy _1) -> [bb1];
    }

    bb1: {
        _3 = load_type(B);
        _0 = call const fn baml.json.from_string<copy _3>(copy _2) -> [bb2];
    }

    bb2: {
        return;
    }
}

fn user.A.from_json(j: baml.json.json) -> A {
    // Locals:
    let _0: A // _0 // return
    let _1: baml.json.json // j // param
    let _2: string
    let _3: type

    bb0: {
        _2 = call const fn baml.json.stringify(copy _1) -> [bb1];
    }

    bb1: {
        _3 = load_type(A);
        _0 = call const fn baml.json.from_string<copy _3>(copy _2) -> [bb2];
    }

    bb2: {
        return;
    }
}

fn user.B.greet(self: B) -> string {
    // Locals:
    let _0: string // _0 // return
    let _1: B // self // param

    bb0: {
        _0 = copy _1.0;
        goto -> bb1;
    }

    bb1: {
        return;
    }
}

fn user.test_deep_field(a: A) -> string {
    // Locals:
    let _0: string // _0 // return
    let _1: A // a // param

    bb0: {
        _0 = copy _1.0.0;
        goto -> bb1;
    }

    bb1: {
        return;
    }
}

fn user.test_deep_method(a: A) -> string {
    // Locals:
    let _0: string // _0 // return
    let _1: A // a // param
    let _2: () -> string throws never

    bb0: {
        _2 = copy _1.0;
        _0 = call const fn user.B.greet(copy _2) -> [bb1];
    }

    bb1: {
        return;
    }
}

fn user.test_direct_method(b: B) -> string {
    // Locals:
    let _0: string // _0 // return
    let _1: B // b // param

    bb0: {
        _0 = call const fn user.B.greet(copy _1) -> [bb1];
    }

    bb1: {
        return;
    }
}

fn user.A.to_json(self: A) -> baml.json.json {
    // Locals:
    let _0: baml.json.json // _0 // return
    let _1: A // self // param
    let _2: string
    let _3: type

    bb0: {
        _3 = load_type(A);
        _2 = call const fn baml.json.to_string<copy _3>(copy _1) -> [bb1];
    }

    bb1: {
        _0 = call const fn baml.json.parse(copy _2) -> [bb2];
    }

    bb2: {
        return;
    }
}

fn user.B.to_json(self: B) -> baml.json.json {
    // Locals:
    let _0: baml.json.json // _0 // return
    let _1: B // self // param
    let _2: string
    let _3: type

    bb0: {
        _3 = load_type(B);
        _2 = call const fn baml.json.to_string<copy _3>(copy _1) -> [bb1];
    }

    bb1: {
        _0 = call const fn baml.json.parse(copy _2) -> [bb2];
    }

    bb2: {
        return;
    }
}
