baml_language/crates/baml_tests/snapshots/compiles/deep_method_call/baml_tests__compiles__deep_method_call__04_tir.snap
---
source: crates/baml_tests/src/generated_tests.rs
---
=== TIR2 ===
class user.B {
  label: string
}
function user.B.greet(self: user.B) -> string throws never {
  { : string
    self.label : string
  }
}
function user.B.to_json(self: user.B) -> baml.json.json throws baml.json.JsonSerializationError | baml.json.JsonParseError {
  baml.json.parse(baml.json.to_string<B>(self)) : baml.json.json
}
function user.B.from_json(j: baml.json.json) -> user.B throws baml.json.JsonParseError | baml.json.JsonDecodeError {
  baml.json.from_string<T>(baml.json.stringify(j)) : user.B
}
class user.A {
  b: user.B
}
function user.A.to_json(self: user.A) -> baml.json.json throws baml.json.JsonSerializationError | baml.json.JsonParseError {
  baml.json.parse(baml.json.to_string<A>(self)) : baml.json.json
}
function user.A.from_json(j: baml.json.json) -> user.A throws baml.json.JsonParseError | baml.json.JsonDecodeError {
  baml.json.from_string<T>(baml.json.stringify(j)) : user.A
}
function user.test_deep_method(a: user.A) -> string throws never {
  { : string
    a.b.greet() : string
  }
}
function user.test_deep_field(a: user.A) -> string throws never {
  { : string
    a.b.label : string
  }
}
function user.test_direct_method(b: user.B) -> string throws never {
  { : string
    b.greet() : string
  }
}
class user.B$stream {
  label: null | string
}
class user.A$stream {
  b: null | user.B$stream
}
