baml_language/crates/baml_tests/snapshots/compiles/deep_method_call/baml_tests__compiles__deep_method_call__05_diagnostics.snap
---
source: crates/baml_tests/src/generated_tests.rs
assertion_line: 7826
---
=== COMPILER2 DIAGNOSTICS ===
No errors found.
