baml_language/crates/baml_tests/snapshots/compiles/deep_method_call/baml_tests__compiles__deep_method_call__06_codegen.snap
---
source: crates/baml_tests/src/generated_tests.rs
---
function user.A.from_json(j: baml.json.json) -> A {
    load_var j
    call baml.json.stringify
    store_var _2
    load_type A
    load_var _2
    call baml.json.from_string
    return
}

function user.A.to_json(self: null) -> baml.json.json {
    load_type A
    load_var self
    call baml.json.to_string
    call baml.json.parse
    return
}

function user.B.from_json(j: baml.json.json) -> B {
    load_var j
    call baml.json.stringify
    store_var _2
    load_type B
    load_var _2
    call baml.json.from_string
    return
}

function user.B.greet(self: null) -> string {
    load_var self
    load_field .label
    return
}

function user.B.to_json(self: null) -> baml.json.json {
    load_type B
    load_var self
    call baml.json.to_string
    call baml.json.parse
    return
}

function user.test_deep_field(a: A) -> string {
    load_var a
    load_field .b
    load_field .label
    return
}

function user.test_deep_method(a: A) -> string {
    load_var a
    load_field .b
    call user.B.greet
    return
}

function user.test_direct_method(b: B) -> string {
    load_var b
    call user.B.greet
    return
}
